tests/errors/macro-argument-as-label.spcasmtest
org 0

<label>:
	nop
